--- a/index.html
+++ b/index.html
@@ -76,10 +76,9 @@
             //键盘弹起与隐藏都会引起窗口的高度发生变化
             var resizeHeight=document.documentElement.clientHeight || document.body.clientHeight;
             if(resizeHeight-0 < originalHeight-0){
-                alert("1");
+                console.log('显示')；
             } else {
                 $("#fullpage").css("transfom","translate3d(0px, 0px, 0px)");
-                alert("2");
             }
         }
     </script>
