--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             //键盘弹起与隐藏都会引起窗口的高度发生变化
             var resizeHeight=document.documentElement.clientHeight || document.body.clientHeight;
             if(resizeHeight-0 < originalHeight-0){
-                console.log("显示");
+                console.log("显示1")
             } else {
                 $("#fullpage").css("transfom","translate3d(0px, 0px, 0px)");
             }
