--- a/index.html
+++ b/index.html
@@ -63,13 +63,14 @@
     <script type="text/javascript" >
         //监控安卓调起软键盘高度
         var originalHeight=document.documentElement.clientHeight ||document.body.clientHeight;
-        alert(originalHeight);
         window.onresize = function(){
             //键盘弹起与隐藏都会引起窗口的高度发生变化
             var resizeHeight=document.documentElement.clientHeight || document.body.clientHeight;
             if(resizeHeight-0 < originalHeight-0){
                 $("#fullpage").css("transfom","translate3d(0px, 0px, 0px)");
-                alert("resizeHeight",resizeHeight);
+                $("#fullpage").css("height",originalHeight+"px");
+            } else {
+                $("#fullpage").css("height",originalHeight+"px");
             }
         }
     </script>
