--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             var resizeHeight=document.documentElement.clientHeight || document.body.clientHeight;
             if(resizeHeight-0 < originalHeight-0){
                 $("#fullpage").css("transfom","translate3d(0px, 0px, 0px)");
-                $("#fullpage").css("height",originalHeight+"px");
+                $("input").blur();
             } else {
                 $("#fullpage").css("height",originalHeight+"px");
             }
