--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <input type="text" placeholder="姓名">
             <input type="text" placeholder="姓名">
             <input type="text" placeholder="姓名">
-            <input type="text" placeholder="姓名">
+            <input type="text" placeholder="手机号">
          </div>
          <div class="section">第二屏</div>
          <div class="section">
