--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
             //键盘弹起与隐藏都会引起窗口的高度发生变化
             var resizeHeight=document.documentElement.clientHeight || document.body.clientHeight;
             if(resizeHeight-0 < originalHeight-0){
-                $("#fullpage").css("transfom","translate3d(0px, 0px, 0px)");
+                console.log(1);
             } else {
+                $("#fullpage").css("transfom","translate3d(0px, 0px, 0px)");
                 $("#fullpage").css("height",originalHeight+"px");
-                $("input").blur();
             }
         }
     </script>
