--- a/index.html
+++ b/index.html
@@ -58,18 +58,17 @@
          <div class="section">第四屏</div>
     </div>
     <script type="text/javascript" >
-        //监控安卓调起软键盘高度
-        var originalHeight=document.documentElement.clientHeight ||document.body.clientHeight;
-        window.onresize = function(){
-            //键盘弹起与隐藏都会引起窗口的高度发生变化
-            var resizeHeight=document.documentElement.clientHeight || document.body.clientHeight;
-            if(resizeHeight-0 < originalHeight-0){
-                console.log(1);
-            } else {
-                $("#fullpage").css("transfom","translate3d(0px, 0px, 0px)");
-                $("#fullpage").css("height",originalHeight+"px");
-            }
-        }
+        // Saves the offset when the user clicks the input
+        let initialOffset = $('body').scrollTop();
+        $('input').focus(function(e) {
+            let offset = $(e.target).offset();
+            initialOffset = $('body').scrollTop();
+            $('body').scrollTop(offset.top-100);
+        });
+        $('input').focusout(function(e) {
+            // Reset to the initial offset
+            $('body').scrollTop(initialOffset);
+        });
     </script>
 </body>
 </html>
