--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             if(resizeHeight-0 < originalHeight-0){
                 console.log(1);
             } else {
-                $('input[type="text"]').blur(function() {
+                $('input').blur(function() {
                   $(window).scrollTop(0,0);
                 });
             }
