--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
             if(resizeHeight-0 < originalHeight-0){
                 console.log(1);
             } else {
-                // $('input').blur(function() {
-                //   $(window).scrollTop(0,0);
-                // });
-                $('input').blur();
+                $('input').blur(function() {
+                  $(window).scrollTop(0,0);
+                });
             }
         }
     </script>
