--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <div id="fullpage">
          <div class="section">
-            <input type="text" placeholder="姓名">
+            <input type="text" placeholder="name">
             <input type="text" placeholder="姓名">
             <input type="text" placeholder="姓名">
             <input type="text" placeholder="手机号">
