--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                 }
             });
             $('input').focus(function() { $('#fullpage').fullpage.setAutoScrolling(false); });
-            $('input').blur(function() { $('#fullpage').fullpage.setAutoScrolling(true); });
         });
     </script>
     <style>
@@ -45,7 +44,7 @@
     <div id="fullpage">
          <div class="section">
             <input type="text" placeholder="name">
-            <input type="text" placeholder="link">
+            <input type="text" placeholder="linkk">
             <input type="text" placeholder="姓名">
             <input type="text" placeholder="手机号">
          </div>
