--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
             //键盘弹起与隐藏都会引起窗口的高度发生变化
             var resizeHeight=document.documentElement.clientHeight || document.body.clientHeight;
             if(resizeHeight-0 < originalHeight-0){
-                console.log(1);
-                $('input').focus(function() { $('#fullpage').fullpage.setAutoScrolling(false); });
+                $('input').focus(function() { $('#fullpage').fullpage.setAutoScrolling(true); });
             } else {
-                $('input').blur(function() { $('#fullpage').fullpage.setAutoScrolling(true); })
+                $('input').blur(function() { $('#fullpage').fullpage.setAutoScrolling(false); })
             }
         }
     </script>
