--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 }
             });
         });
-        $('input').focus(function() { $('#fullpage').fullpage.setAutoScrolling(true); });
+        $('input').focus(function() { $('#fullpage').fullpage.setAutoScrolling(false); });
     </script>
     <style>
         input {
