--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="fullpage">
          <div class="section">
             <input type="text" placeholder="name">
-            <input type="text" placeholder="link">
+            <input type="text" placeholder="url">
             <input type="text" placeholder="姓名">
             <input type="text" placeholder="手机号">
          </div>
