--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             if(resizeHeight-0 < originalHeight-0){
                
             } else {
-                $('input').blur(function() { $('#fullpage').fullpage.setAutoScrolling(false); })
+                $('input').blur();
             }
         }
     </script>
