--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
          <div class="section">
             <input type="text" placeholder="name">
             <input type="text" placeholder="url">
-            <input type="text" placeholder="姓名">
+            <input type="text" placeholder="link">
             <input type="text" placeholder="手机号">
          </div>
          <div class="section">第二屏</div>
