--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 }
             });
         });
-        $('input').focus(function() { $('#fullpage').fullpage.setAutoScrolling(false); });
+        $('input').focus(function() { $('#fullpage').fullpage.setAutoScrolling(true); });
     </script>
     <style>
         input {
@@ -66,7 +66,7 @@
             if(resizeHeight-0 < originalHeight-0){
                
             } else {
-                $('input').blur(function() { $('#fullpage').fullpage.setAutoScrolling(true); });
+                $('input').blur(function() { $('#fullpage').fullpage.setAutoScrolling(false); });
             }
         }
     </script>
