--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <input type="text" placeholder="name">
             <input type="text" placeholder="url">
             <input type="text" placeholder="link">
-            <input type="text" placeholder="手机号">
+            <input type="text" placeholder="phoneNumber">
          </div>
          <div class="section">第二屏</div>
          <div class="section">
