--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             });
         });
         $('input').focus(function() { $('#fullpage').fullpage.setAutoScrolling(false); });
-        $('input').blur(function() { $('#fullpage').fullpage.setAutoScrolling(true); });
     </script>
     <style>
         input {
@@ -65,9 +64,9 @@
             //键盘弹起与隐藏都会引起窗口的高度发生变化
             var resizeHeight=document.documentElement.clientHeight || document.body.clientHeight;
             if(resizeHeight-0 < originalHeight-0){
-               
+               $('input').focus(function() { $('#fullpage').fullpage.setAutoScrolling(false); });
             } else {
-                
+                $('input').blur(function() { $('#fullpage').fullpage.setAutoScrolling(true); });
             }
         }
     </script>
