--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                 }
             });
         });
-        $('input').focus(function() { $('#fullpage').fullpage.setAutoScrolling(false); });
     </script>
     <style>
         input {
@@ -46,7 +45,7 @@
             <input type="text" placeholder="name">
             <input type="text" placeholder="url">
             <input type="text" placeholder="link">
-            <input type="text" placeholder="phone">
+            <input type="text" placeholder="phoneNumber">
          </div>
          <div class="section">第二屏</div>
          <div class="section">
