--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     }
                 }
             });
-            $('input').focusout(function() { $('#fullpage').fullpage.setAutoScrolling(true); });
+            $('#phoneNumber').focusout(function() { $('#fullpage').fullpage.setAutoScrolling(true); });
         });
     </script>
     <style>
@@ -46,7 +46,7 @@
             <input type="text" placeholder="name">
             <input type="text" placeholder="url">
             <input type="text" placeholder="link">
-            <input type="text" placeholder="phoneNumber">
+            <input type="text" id="phoneNumber" placeholder="phone">
          </div>
          <div class="section">第二屏</div>
          <div class="section">
@@ -64,10 +64,10 @@
             //键盘弹起与隐藏都会引起窗口的高度发生变化
             var resizeHeight=document.documentElement.clientHeight || document.body.clientHeight;
             if(resizeHeight-0 < originalHeight-0){
-               $('input').focusin(function() { $('#fullpage').fullpage.setAutoScrolling(false); });
+               $('#phoneNumber').focusin(function() { $('#fullpage').fullpage.setAutoScrolling(false); });
             } else {
                 //$('input').blur(function() { $('#fullpage').fullpage.setAutoScrolling(true); });
-                $('input').focusout();
+                $('#phoneNumber').focusout();
             }
         }
     </script>
