--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <input type="text" placeholder="name">
             <input type="text" placeholder="url">
             <input type="text" placeholder="link">
-            <input type="text" id="phoneNumber" placeholder="phoneN">
+            <input type="text" id="phoneNumber" placeholder="phone">
          </div>
          <div class="section">第二屏</div>
          <div class="section">
@@ -64,10 +64,6 @@
             var resizeHeight=document.documentElement.clientHeight || document.body.clientHeight;
             if(resizeHeight-0 < originalHeight-0){
                $('#fullpage').fullpage.setAutoScrolling(false);
-            } else {
-                //$('input').blur(function() { $('#fullpage').fullpage.setAutoScrolling(true); });
-                $('#phoneNumber').focusout();
-                $('#fullpage').fullpage.setAutoScrolling(true);
             }
         }
     </script>
