--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     }
                 }
             });
-            $('input').focus(function() { $('#fullpage').fullpage.setAutoScrolling(false); };
-            $('input').blur(function() { $('#fullpage').fullpage.setAutoScrolling(true); };
+            $('input').focus(function() { $('#fullpage').fullpage.setAutoScrolling(false); });
+            $('input').blur(function() { $('#fullpage').fullpage.setAutoScrolling(true); });
         });
     </script>
     <style>
