--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                 }
             });
             $('input').focus(function() { $('#fullpage').fullpage.setAutoScrolling(false); });
-            $('input').blur(function() { $('#fullpage').fullpage.setAutoScrolling(true); });
         });
     </script>
     <style>
@@ -47,7 +46,7 @@
             <input type="text" placeholder="name">
             <input type="text" placeholder="url">
             <input type="text" placeholder="link">
-            <input type="text" id="phoneNumber" placeholder="phonN">
+            <input type="text" id="phoneNumber" placeholder="phonV">
          </div>
          <div class="section">第二屏</div>
          <div class="section">
