--- a/index.html
+++ b/index.html
@@ -19,13 +19,24 @@
                 anchors: ['page1', 'page2', 'page3','page4'],
                 sectionsColor: ['#445c95', '#0f1c3c', '#e6e6e6','#e6e6e6'],
                 scrollOverflow: true,
+                afterRender: function(){
+                    $('input').focus(function() { $('#fullpage').fullpage.setAutoScrolling(false) });
+                                    //监控安卓调起软键盘高度
+                    var originalHeight=document.documentElement.clientHeight ||document.body.clientHeight;
+                    window.onresize = function(){
+                        //键盘弹起与隐藏都会引起窗口的高度发生变化
+                        var resizeHeight=document.documentElement.clientHeight || document.body.clientHeight;
+                        if(resizeHeight-0 > originalHeight-0){
+                           $('#fullpage').fullpage.setAutoScrolling(true);
+                        }
+                    }
+                },
                 onLeave: function(index, nextIndex, direction){
                     if (nextIndex === 1) {
                         $("#fullpage").css("transfom","translate3d(0px, 0px, 0px)");
                     }
                 }
             });
-            $('input').focus(function() { $('#fullpage').fullpage.setAutoScrolling(false); });
         });
     </script>
     <style>
@@ -58,15 +69,6 @@
          <div class="section">第四屏</div>
     </div>
     <script type="text/javascript" >
-        //监控安卓调起软键盘高度
-        var originalHeight=document.documentElement.clientHeight ||document.body.clientHeight;
-        window.onresize = function(){
-            //键盘弹起与隐藏都会引起窗口的高度发生变化
-            var resizeHeight=document.documentElement.clientHeight || document.body.clientHeight;
-            if(resizeHeight-0 > originalHeight-0){
-               $('#fullpage').fullpage.setAutoScrolling(true);
-            }
-        }
     </script>
 </body>
 </html>
