--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <input type="text" placeholder="name">
             <input type="text" placeholder="url">
             <input type="text" placeholder="link">
-            <input type="text" id="phoneNumber" placeholder="phonV">
+            <input type="text" id="phoneNumber" placeholder="phonN">
          </div>
          <div class="section">第二屏</div>
          <div class="section">
