--- a/index.html
+++ b/index.html
@@ -49,11 +49,27 @@
             border: 0;
             border: 1px solid #fff;
         }
+        .reward-title {
+            font-weight: bold;
+            font-size: 10px;
+            color: #fff;
+        }
+        .ui-icon-banner-tips {
+            display: inline-block;
+            width: 14px;
+            height: 14px;
+            margin-left: 3px;
+            background: url(./images/info_white.png) center no-repeat;
+            background-size: 100%;
+            vertical-align: -12%;
+        }
+ 
     </style>
 </head>
 <body>
     <div id="fullpage">
          <div class="section">
+            <div class="reward-title">当前奖励金<i class="ui-icon-banner-tips"></i></div>
             <input type="text" placeholder="name">
             <input type="text" placeholder="url">
             <input type="text" placeholder="link">
