--- a/flex.html
+++ b/flex.html
@@ -58,6 +58,7 @@
 		  justify-content: flex-end !important;
 		}
 		.flex-item {
+			display: block;
 			height: 100%;
 			line-height: 80px;
 			color: green;
