--- a/flex.html
+++ b/flex.html
@@ -74,7 +74,7 @@
 <body>
 	<div class="flex">
 		<div class="flex-item flex-1">
-			可伸缩盒子
+			可伸缩容器
 		</div>
 		<div class="flex-item flex-item--space">固定</div>
 	<div>
