--- a/advertisement.html
+++ b/advertisement.html
@@ -65,6 +65,7 @@
             color: #000000;
             padding-right: 10px;
             height: 35px;
+            border: 0;
             outline: none;
         }
     </style>
@@ -79,15 +80,15 @@
                 </div>
                 <div class="consult-info__item">
                     <label class="title title--diff">联系人:</label>
-                    <input class="info-input" type="text" onblur="scrollTop()>
+                    <input class="info-input" type="text" onblur="scrollTop()">
                 </div>
                 <div class="consult-info__item">
                     <label class="title">手机号码:</label>
-                    <input class="info-input" type="text" onblur="scrollTop()>
+                    <input class="info-input" type="text" onblur="scrollTop()">
                 </div>
                 <div class="consult-info__item">
                     <label class="title">卡号:</label>
-                    <input class="info-input" type="text" onblur="scrollTop()>
+                    <input class="info-input" type="text" onblur="scrollTop()">
                 </div>
             </div>
             <p class="copyright">copyright @ wwww.dddd.com</p>
