--- a/advertisement.html
+++ b/advertisement.html
@@ -96,6 +96,7 @@
     </div>
     <script type="text/javascript">
         function scrollTop() {
+            console.log('blur');
             window.scroll(0,0);
         }
     </script>
