--- a/advertisement.html
+++ b/advertisement.html
@@ -76,29 +76,23 @@
             <div class="wrapper">
                 <div class="consult-info__item">
                     <label class="title">企业名称:</label>
-                    <input class="info-input" type="text" onblur="scrollTop()">
+                    <input class="info-input" type="text" onblur="window.scroll(0,0)">
                 </div>
                 <div class="consult-info__item">
                     <label class="title title--diff">联系人:</label>
-                    <input class="info-input" type="text" onblur="scrollTop()">
+                    <input class="info-input" type="text" onblur="window.scroll(0,0)">
                 </div>
                 <div class="consult-info__item">
                     <label class="title">手机号码:</label>
-                    <input class="info-input" type="text" onblur="scrollTop()">
+                    <input class="info-input" type="text" onblur="window.scroll(0,0)">
                 </div>
                 <div class="consult-info__item">
                     <label class="title">卡号:</label>
-                    <input class="info-input" type="text" onblur="scrollTop()">
+                    <input class="info-input" type="text" onblur="window.scroll(0,0)">
                 </div>
             </div>
             <p class="copyright">copyright @ wwww.dddd.com</p>
         </div>      
     </div>
-    <script type="text/javascript">
-        function scrollTop() {
-            console.log('blur');
-            window.scroll(0,0);
-        }
-    </script>
 </body>
 </html>
