--- a/footer.html
+++ b/footer.html
@@ -51,6 +51,9 @@
          <input type="text" placeholder="请输入任意数">
          <input type="text" placeholder="请输入任意数">
          <input type="text" placeholder="请输入任意数">
+         <input type="text" placeholder="请输入任意数">
+         <input type="text" placeholder="请输入任意数">
+         <input type="text" placeholder="请输入任意数">
          <div class="copyright">本服务由xxx提供</div>
     </div>
 </body>
