--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>fullpage测试</title>
+    <title>foot测试</title>
     <style>
         * {
             margin: 0;
@@ -30,6 +30,44 @@
             text-align: center;
             color: #999;
         }
+        .select-box {
+            height: 100vh;
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -moz-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -webkit-flex-direction: column;
+            -moz-box-orient: vertical;
+            -moz-box-direction: normal;
+            -ms-flex-direction: column;
+            flex-direction: column;
+        }
+        .flex-1 {
+            width: 100%;
+            display: block;
+            -webkit-box-flex: 1;
+            -ms-flex-positive: 1;
+            -webkit-flex: 1;
+            -moz-box-flex: 1;
+            -ms-flex: 1;
+            flex: 1;
+        }
+        .mod-list-page {
+            height: 100%;
+            overflow-y: auto;
+            overflow-x: hidden;
+            -webkit-overflow-scrolling: touch;
+        }
+        .mod-list li, .mod-list .list-item {
+            padding: 12px 30px;
+            font-size: 14px;
+            color: #3e4556;
+            border-bottom: 1px solid #e5e5e5;
+            background: #ffffff;
+        }
         input {
             display: block;
             width: 90%;
@@ -47,13 +85,22 @@
 </head>
 <body>
     <div class="wrap">
-         <input type="text" placeholder="请输入任意数">
-         <input type="text" placeholder="请输入任意数">
-         <input type="text" placeholder="请输入任意数">
-         <input type="text" placeholder="请输入任意数">
-         <input type="text" placeholder="请输入任意数">
-         <input type="text" placeholder="请输入任意数">
-         <input type="text" placeholder="请输入任意数">
+        <div class="select-box">
+            <input type="text" placeholder="请输入任意数">
+            <div class="mod-list-wrapper flex-1">
+                <div class="mod-list-page">
+                    <ul class="mod-list">
+                       <li class="list-item">测测1</li>
+                       <li class="list-item">测测2</li>
+                       <li class="list-item">测测3</li>
+                       <li class="list-item">测测4</li>
+                       <li class="list-item">测测2</li>
+                       <li class="list-item">测测3</li>
+                       <li class="list-item">测测4</li>  
+                    </ul>
+                </div>
+            </div>
+        </div>
          <div class="copyright">本服务由xxx提供</div>
     </div>
 </body>
