--- a/footer.html
+++ b/footer.html
@@ -31,19 +31,7 @@
             color: #999;
         }
         .select-box {
-            height: 100vh;
-            display: -webkit-box;
-            display: -webkit-flex;
-            display: -moz-box;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-orient: vertical;
-            -webkit-box-direction: normal;
-            -webkit-flex-direction: column;
-            -moz-box-orient: vertical;
-            -moz-box-direction: normal;
-            -ms-flex-direction: column;
-            flex-direction: column;
+      
         }
         .flex-1 {
             width: 100%;
@@ -56,7 +44,14 @@
             flex: 1;
         }
         .mod-list-page {
-            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 8;
+            box-sizing: border-box;
+            height: 100vh;
+            padding-top: 55px;
             overflow-y: auto;
             overflow-x: hidden;
             -webkit-overflow-scrolling: touch;
@@ -68,12 +63,21 @@
             border-bottom: 1px solid #e5e5e5;
             background: #ffffff;
         }
+        .select-area {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 10;
+            height: 55px;
+            border: 1px solid #e5e5e5;
+            background-color: #fff;
+        }
         input {
             display: block;
             width: 90%;
             height: 45px;
             margin: 0 auto;
-            margin-bottom: 15px;
             font-size: 14px;
             border: 0;
             text-indent: 20px;
@@ -86,8 +90,10 @@
 <body>
     <div class="wrap">
         <div class="select-box">
-            <input type="text" placeholder="请输入任意数">
-            <div class="mod-list-wrapper flex-1">
+            <div class="select-area">
+                <input type="text" placeholder="请输入任意数"> 
+            </div>
+            <div class="mod-list-wrapper">
                 <div class="mod-list-page">
                     <ul class="mod-list">
                        <li class="list-item">测测1</li>
