--- a/footer.html
+++ b/footer.html
@@ -84,7 +84,7 @@
             border-radius: 8px;
             border: 1px solid #666;
         }
-        .borde-image{
+        .borderImage{
             position: relative;
             z-index: 1;
             margin: 0 6px;
@@ -97,10 +97,10 @@
             border: 20px solid transparent;
             border-style: solid;
             border-width: 20px;
-            -moz-border-image: url(./images/coupon/card_border.png) 38 38 34 30 stretch; /* 老版本的 Firefox */
-            -webkit-border-image: url(./images/coupon/card_border.png) 38 38 34 30 stretch; /* Safari */
-            -o-border-image: url(./images/coupon/card_border.png) 38 38 34 30 stretch; /* Opera */
-            border-image: url(./images/coupon/card_border.png) 38 38 34 30 repeat stretch ;
+            -moz-border-image: url(./images/card_border.png) 38 38 34 30 stretch; /* 老版本的 Firefox */
+            -webkit-border-image: url(./images/card_border.png) 38 38 34 30 stretch; /* Safari */
+            -o-border-image: url(./images/card_border.png) 38 38 34 30 stretch; /* Opera */
+            border-image: url(./images/card_border.png) 38 38 34 30 repeat stretch ;
         }
     </style>
 </head>
@@ -117,7 +117,7 @@
                        <li class="list-item">测测2</li>
                        <li class="list-item">测测3</li>  
                     </ul>
-                    <div class="border-image">测试border-images</div>
+                    <div class="borderImage">测试border-images</div>
                 </div>
             </div>
         </div>
