--- a/footer.html
+++ b/footer.html
@@ -64,11 +64,11 @@
             background: #ffffff;
         }
         .select-area {
-            position: fixed;
+/*            position: fixed;
             top: 0;
             left: 0;
             right: 0;
-            z-index: 10;
+            z-index: 10;*/
             height: 55px;
             border: 1px solid #e5e5e5;
             background-color: #fff;
@@ -114,17 +114,22 @@
     <div class="wrap">
         <div class="select-box">
             <div class="select-area mod-formite">
-                <label class="dis-block">验证码<lable>
                 <input type="text" placeholder="请输入任意数">
             </div>
-            <div class="mod-list-wrapper">
-                <div class="mod-list-page">
-                    <ul class="mod-list">
-                       <li class="list-item">测测1</li>
-                       <li class="list-item">测测2</li>
-                       <li class="list-item">测测3</li>  
-                    </ul>
-                </div>
+            <div class="select-area mod-formite">
+                <input type="text" placeholder="请输入任意数">
+            </div>
+            <div class="select-area mod-formite">
+                <input type="text" placeholder="请输入任意数">
+            </div>
+            <div class="select-area mod-formite">
+                <input type="text" placeholder="请输入任意数">
+            </div>
+            <div class="select-area mod-formite">
+                <input type="text" placeholder="请输入任意数">
+            </div>
+            <div class="select-area mod-formite">
+                <input type="text" placeholder="请输入任意数">
             </div>
             <div class="bottom">
                 底部的文案
