--- a/footer.html
+++ b/footer.html
@@ -19,7 +19,7 @@
             height: auto;
             min-height: 100%;
             padding-top: 20px;
-            padding-bottom: 150px;
+            padding-bottom: 50px;
         }
         .wrap .copyright{
             position: absolute;
@@ -31,7 +31,7 @@
             color: #999;
         }
         .select-box {
-      
+            padding-bottom: 100px;
         }
         .flex-1 {
             width: 100%;
@@ -108,6 +108,17 @@
             line-height: 70px;
             text-align: center;
         }
+        button {
+            display: block;
+            margin: 0 auto;
+            margin-top: 35px;
+            height: 50px;
+            width: 85%;
+            border: 0;
+            border-radius: 25px;
+            background-color: orange;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
@@ -119,6 +130,7 @@
             <div class="select-area mod-formite">
                 <input type="text" placeholder="请输入任意数">
             </div>
+            <button>按钮</button>
             <div class="bottom">
                 底部的文案
             </div>
