--- a/footer.html
+++ b/footer.html
@@ -18,7 +18,6 @@
             box-sizing: border-box;
             height: auto;
             min-height: 100%;
-            padding-top: 20px;
             padding-bottom: 50px;
         }
         .wrap .copyright{
@@ -31,7 +30,7 @@
             color: #999;
         }
         .select-box {
-            padding-bottom: 200px;
+            height: calc(100vh - 120px);
         }
         .flex-1 {
             width: 100%;
