--- a/footer.html
+++ b/footer.html
@@ -30,7 +30,7 @@
             color: #999;
         }
         .select-box {
-            height: calc(100vh - 120px);
+            padding-bottom: 200px;
         }
         .flex-1 {
             width: 100%;
