--- a/footer.html
+++ b/footer.html
@@ -30,7 +30,7 @@
             color: #999;
         }
         .select-box {
-            padding-bottom: 200px;
+            padding-bottom: calc(100vh - 274px);
         }
         .flex-1 {
             width: 100%;
@@ -63,7 +63,7 @@
             background: #ffffff;
         }
         .select-area {
-/*            position: fixed;
+/*          position: fixed;
             top: 0;
             left: 0;
             right: 0;
