--- a/footer.html
+++ b/footer.html
@@ -30,7 +30,7 @@
             color: #999;
         }
         .select-box {
-            padding-bottom: calc(100vh - 274px);
+            padding-bottom: 224px;
         }
         .flex-1 {
             width: 100%;
