--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         return;
       }
 
+      console.log('uipa===', uipa);
       //translate
       var mappings = [
         { 'src': /^\s*\//g, 'dest': '' },
