--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         return;
       }
 
-      console.log('uipa===', uipa);
+      console.log('===uipa===', uipa);
       //translate
       var mappings = [
         { 'src': /^\s*\//g, 'dest': '' },
